--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 
 <body>
   <script>
+    window.location="https://ubg98.github.io/ParkOut/";
+  </script>
+  <script>
     PokiSDK.init().then(
     () => {
         console.log("Poki SDK successfully initialized");
